# internal/api/docs/swagger.yaml
@@ -3027,6 +3027,46 @@ paths:
       summary: GetPcscDriverStatus
       tags:
       - settings
+  /system/pcsc-driver/start:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: 启动失败
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: StartPcscDriver
+      tags:
+      - settings
+  /system/pcsc-driver/stop:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: 停止失败
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: StopPcscDriver
+      tags:
+      - settings
   /system/update/check:
     get:
       produces:
